update readme.md file

--- a/Hotel_Billing.ipynb
+++ b/Hotel_Billing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eb36296e",
    "metadata": {},
    "outputs": [
@@ -103,24 +103,24 @@
    "source": [
     "import datetime\n",
     "from datetime import datetime\n",
-    "import pyodbc # This imports library that allows python to talk to SQL server\n",
-    "conn = pyodbc.connect(                       #connection between python and sql\n",
-    "    'Driver={SQL Server};'                   # Which SQL driver to use\n",
-    "    'Server=DESKTOP-25TJ8LJ\\\\SQLEXPRESS;'    #SQL server name\n",
-    "    'Database=menudb;'                       #To which db we have to connect\n",
+    "import pyodbc \n",
+    "conn = pyodbc.connect(                       \n",
+    "    'Driver={SQL Server};'                   \n",
+    "    'Server=DESKTOP-25TJ8LJ\\\\SQLEXPRESS;'    \n",
+    "    'Database=menudb;'                       \n",
     "    'Trusted_Connection=yes;'\n",
     ")\n",
     "\n",
-    "cursor = conn.cursor()                                     # pointer that executes SQL queries\n",
-    "cursor.execute(\"SELECT ItemID, ItemName, Price from Menu\")        # this sends SQL query to database\n",
-    "rows=cursor.fetchall()                                     #this collect all the rows returned by SQL\n",
+    "cursor = conn.cursor()                                     \n",
+    "cursor.execute(\"SELECT ItemID, ItemName, Price from Menu\")       \n",
+    "rows=cursor.fetchall()                                     \n",
     "print(\"\\n\"+\"-\"*40)\n",
     "print(\"\\n            MENU \")\n",
     "print(\"-\"*40)\n",
     "print(\"\\n{:<5} {:<20} {:>10}\".format(\"ID\",\"Item  Name\",\"Price\"))\n",
     "print(\"-\"*40)\n",
     "for row in rows:\n",
-    "    print(\"{:<5} {:<20} {:>10}\".format(row[0],row[1],row[2]))  #row[0]-->ItemID, row[1]-->ItemName,row[2]-->Price\n",
+    "    print(\"{:<5} {:<20} {:>10}\".format(row[0],row[1],row[2])) \n",
     "choice=input(\"\\nDo you want to place order?(yes/no): \").strip().lower()\n",
     "if choice != \"yes\":\n",
     "    print(\"Thank you!\")\n",
@@ -146,7 +146,7 @@
     "            order_items.append({\"id\":item_id,\n",
     "                                \"name\":item_name,\n",
     "                                \"quantity\":quantity,\n",
-    "                                \"amount\":amount}) #we store everything in list\n",
+    "                                \"amount\":amount}) \n",
     "        else:\n",
     "            print(\"Item not found!\")\n",
     "    print(\"\\n\"+\"=\"*45)\n",
