Updated hotel billing

--- a/Hotel_Billing.ipynb
+++ b/Hotel_Billing.ipynb
@@ -10,9 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pyodbc in c:\\programdata\\anaconda3\\lib\\site-packages (5.2.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Defaulting to user installation because normal site-packages is not writeableNote: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -23,6 +21,14 @@
       "[notice] A new release of pip is available: 25.3 -> 26.0.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: pyodbc in c:\\programdata\\anaconda3\\lib\\site-packages (5.2.0)\n"
+     ]
     }
    ],
    "source": [
@@ -31,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "01535b8a",
    "metadata": {},
    "outputs": [],
@@ -43,21 +49,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb36296e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime \n",
+    "from datetime import datetime  \n",
+    "import pyodbc   \n",
+    "class database_connectivity:  \n",
+    "    def __init__(self):  \n",
+    "        try: \n",
+    "            self.conn = pyodbc.connect(        \n",
+    "                'Driver={SQL Server};'\n",
+    "                'Server=DESKTOP-25TJ8LJ\\\\SQLEXPRESS;'    \n",
+    "                'Database=menudb;'                       \n",
+    "                'Trusted_Connection=yes;')\n",
+    "            self.cursor = self.conn.cursor()  \n",
+    "            print(\"Database is connected properly...\")\n",
+    "        except pyodbc.Error:\n",
+    "            print(\"Database connection Failed...\")  \n",
+    "            print(\"Error: \",pyodbc.Error)\n",
+    "\n",
+    "    def fetch_menu(self):  \n",
+    "        try:  \n",
+    "            self.cursor.execute(\"SELECT ItemID, ItemName, Price from Menu\")       \n",
+    "            return self.cursor.fetchall()       \n",
+    "        except pyodbc.Error:\n",
+    "            print(\"Error while fetching menu:\")\n",
+    "            return[]\n",
+    "        \n",
+    "    def fetch_item(self,item_name): \n",
+    "        try:\n",
+    "            self.cursor.execute(\"SELECT ItemId,price from Menu where lower(ItemName)=lower(?)\",(item_name,))  \n",
+    "            return self.cursor.fetchone()\n",
+    "        except pyodbc.Error:\n",
+    "            print(\"Error while fetching items: \",pyodbc.Error)\n",
+    "            return None\n",
+    "        \n",
+    "    def insert_customer_info(self,name,mobile): \n",
+    "        try:\n",
+    "            self.cursor.execute(\"Insert INTO Customers(Name,mobile) values(?,?)\",(name,mobile))  \n",
+    "            self.conn.commit()\n",
+    "            self.cursor.execute(\"Select @@IDENTITY\")  \n",
+    "            return self.cursor.fetchone()[0]\n",
+    "        except pyodbc.Error:\n",
+    "            print(\"Inserting customer_info error\",pyodbc.Error)\n",
+    "            return None\n",
+    "    \n",
+    "    def insert_order_info(self,customer_id,item_id,quantity,amount):\n",
+    "        try:\n",
+    "            self.cursor.execute(\"Insert into  Orders (CustomerID,ItemID,Quantity,Amount,Orderdate) values(?,?,?,?,getdate())\",(customer_id,item_id,quantity,amount))\n",
+    "            self.conn.commit()\n",
+    "        except pyodbc.Error:\n",
+    "            print(\"inserting order_info error\",pyodbc.Error)\n",
+    "\n",
+    "    def close(self):\n",
+    "        try:\n",
+    "            self.conn.close()\n",
+    "            print(\"Database connected...\")\n",
+    "        except:\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ba54b53f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class menu(): \n",
+    "    def __init__(self,db):  \n",
+    "        self.db=db\n",
+    "\n",
+    "    def display(self):     \n",
+    "        rows=self.db.fetch_menu()\n",
+    "        print(\"\\n\"+\"-\"*40)\n",
+    "        print(\"          Menu\")\n",
+    "        print(\"-\"*40)\n",
+    "        print(\"{:<5} {:<20} {:>10}\".format(\"ID\",\"Item Name\",\"Price\"))\n",
+    "        print(\"-\"*40)\n",
+    "        for row in rows:\n",
+    "            print(\"{:<5} {:<20} {:>10}\". format(row[0],row[1],row[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "95e30f67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Order:  \n",
+    "    def __init__(self,db):\n",
+    "        self.db=db\n",
+    "        self.order_items=[] \n",
+    "        self.total_amount=0  \n",
+    "    def take_order(self):\n",
+    "        while True:\n",
+    "            item_name=input(\"Enter Item name(or type 'done' to finish):\")\n",
+    "            if item_name.lower()=='done':\n",
+    "                break\n",
+    "            try:\n",
+    "                quantity=int(input(\"Enter Quantity: \"))\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid quantity. Please enter a number.\")\n",
+    "                continue\n",
+    "            result=self.db.fetch_item(item_name)\n",
+    "            if  result:\n",
+    "                item_id,price=result\n",
+    "                amount=price*quantity\n",
+    "                self.total_amount +=amount\n",
+    "                self.order_items.append({\n",
+    "                    \"id\":item_id,\n",
+    "                    \"name\":item_name,\n",
+    "                    \"quantity\":quantity,\n",
+    "                    \"amount\":amount})\n",
+    "            else:\n",
+    "                print(\"Item not found\")\n",
+    "    def Print_bill(self,name,mobile):\n",
+    "        print(\"\\n\" + \"=\" * 45)\n",
+    "        print(\"Hotel Bill\".center(45))\n",
+    "        print(\"=\" * 45)\n",
+    "        print(f\"\\nCustomer Name:{name}\")\n",
+    "        print(f\"Mobile       :{mobile}\")\n",
+    "        print(f\"Date & Time  :{datetime.now().strftime('%d-%m-%Y %H:%M:%S')}\")\n",
+    "        print(\"-\"*45)\n",
+    "        print(\"{:<20} {:>10} {:>10}\".format(\"Item\", \"Qty\", \"Amount\"))\n",
+    "        print(\"-\"*45)\n",
+    "        for  item in self.order_items:\n",
+    "            print(\"\\n{:<20} {:>10} {:>10.2f}\".format(\n",
+    "                item['name'],\n",
+    "                item['quantity'],\n",
+    "                item['amount']))\n",
+    "        print(\"-\"*45)\n",
+    "        print(\"{:<5} {:<20} {:>10}\".format(\"\",\"Total:\",self.total_amount)) \n",
+    "        print(\"=\"*45)\n",
+    "\n",
+    "    def save_order(self,customer_id):\n",
+    "        for item in self.order_items:\n",
+    "            self.db.insert_order_info(\n",
+    "                customer_id,\n",
+    "                item['id'],\n",
+    "                item['quantity'],\n",
+    "                item['amount']\n",
+    "            ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0195ee02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Hotel_Bill_print:\n",
+    "    def __init__(self):\n",
+    "        self.db=database_connectivity()\n",
+    "        self.menu=menu(self.db)\n",
+    "        self.order=Order(self.db)\n",
+    "    def run(self):\n",
+    "        try:\n",
+    "            self.menu.display() \n",
+    "            \n",
+    "            choice=input(\"\\n Do you want to place order?(yes/no): \").lower() \n",
+    "            if choice !='yes':\n",
+    "                print(\"Thank You...\")\n",
+    "                return\n",
+    "            name=input(\"Enter name: \") \n",
+    "            mobile=input(\"Enter mobile number: \")\n",
+    "            self.order.take_order() \n",
+    "            self.order.Print_bill(name,mobile) \n",
+    "            customer_id=self.db.insert_customer_info(name,mobile)\n",
+    "            if customer_id:  \n",
+    "                self.order.save_order(customer_id)  \n",
+    "        except Exception:\n",
+    "            print(\"Error: \",Exception)\n",
+    "        finally: \n",
+    "            self.db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e75cddd9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Database is connected properly...\n",
       "\n",
       "----------------------------------------\n",
-      "\n",
-      "            MENU \n",
+      "          Menu\n",
       "----------------------------------------\n",
-      "\n",
-      "ID    Item  Name                Price\n",
+      "ID    Item Name                 Price\n",
       "----------------------------------------\n",
       "1     Vada Pav                  20.00\n",
       "2     Upma                      30.00\n",
@@ -73,121 +261,59 @@
       "12    French Fries              70.00\n",
       "13    Paneer Tikka             150.00\n",
       "14    Biryani                  180.00\n",
-      "15    Thali                    200.00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter  Customer Details\n",
+      "15    Thali                    200.00\n",
       "\n",
       "=============================================\n",
       "                  Hotel Bill                 \n",
       "=============================================\n",
       "\n",
-      "Customer Name:Aarti\n",
-      "Mobile       :6374683746\n",
-      "Date & Time  :16-02-2026 15:28:57\n",
+      "Customer Name:Vaishnavi\n",
+      "Mobile       :7465893746\n",
+      "Date & Time  :20-02-2026 10:45:14\n",
       "---------------------------------------------\n",
       "Item                        Qty     Amount\n",
       "---------------------------------------------\n",
-      "pizza                         2     240.00\n",
-      "cold coffee                   3     180.00\n",
+      "\n",
+      "Pav Bhaji                     2     160.00\n",
+      "\n",
+      "Lassi                         2      90.00\n",
+      "\n",
+      "Burger                        3     270.00\n",
       "---------------------------------------------\n",
-      "                       Total:       420.00\n",
-      "=============================================\n"
+      "      Total:                   520.00\n",
+      "=============================================\n",
+      "Database connected...\n"
      ]
     }
    ],
    "source": [
-    "import datetime\n",
-    "from datetime import datetime\n",
-    "import pyodbc \n",
-    "conn = pyodbc.connect(                       \n",
-    "    'Driver={SQL Server};'                   \n",
-    "    'Server=DESKTOP-25TJ8LJ\\\\SQLEXPRESS;'    \n",
-    "    'Database=menudb;'                       \n",
-    "    'Trusted_Connection=yes;'\n",
-    ")\n",
-    "\n",
-    "cursor = conn.cursor()                                     \n",
-    "cursor.execute(\"SELECT ItemID, ItemName, Price from Menu\")       \n",
-    "rows=cursor.fetchall()                                     \n",
-    "print(\"\\n\"+\"-\"*40)\n",
-    "print(\"\\n            MENU \")\n",
-    "print(\"-\"*40)\n",
-    "print(\"\\n{:<5} {:<20} {:>10}\".format(\"ID\",\"Item  Name\",\"Price\"))\n",
-    "print(\"-\"*40)\n",
-    "for row in rows:\n",
-    "    print(\"{:<5} {:<20} {:>10}\".format(row[0],row[1],row[2])) \n",
-    "choice=input(\"\\nDo you want to place order?(yes/no): \").strip().lower()\n",
-    "if choice != \"yes\":\n",
-    "    print(\"Thank you!\")\n",
-    "    conn.close()\n",
-    "else:\n",
-    "    print(\"Enter  Customer Details\")\n",
-    "    name=input(\"Enter name: \")\n",
-    "    mobile=input(\"Enter mobile number: \")\n",
-    "    total_amount=0   #store final bill\n",
-    "    order_items=[]   #stores each ordered item temporarily\n",
-    "    while  True:\n",
-    "        item_name=input(\"Enter Item name(or type 'done' to finish):\")\n",
-    "        if  item_name.lower()==\"done\":\n",
-    "            break\n",
-    "        quantity =int(input(\"Enter Quantity: \"))\n",
-    "        cursor.execute(\"SELECT ItemId,price from Menu where lower(ItemName)=lower(?)\",(item_name,))\n",
-    "        result=cursor.fetchone()\n",
-    "        if result:\n",
-    "            item_id=result[0]\n",
-    "            price=result[1]\n",
-    "            amount=price*quantity\n",
-    "            total_amount += amount\n",
-    "            order_items.append({\"id\":item_id,\n",
-    "                                \"name\":item_name,\n",
-    "                                \"quantity\":quantity,\n",
-    "                                \"amount\":amount}) \n",
-    "        else:\n",
-    "            print(\"Item not found!\")\n",
-    "    print(\"\\n\"+\"=\"*45)\n",
-    "    print(\"Hotel Bill\".center(45))\n",
-    "    print(\"=\"*45)\n",
-    "    print(f\"\\nCustomer Name:{name}\")\n",
-    "    print(f\"Mobile       :{mobile}\")\n",
-    "    print(f\"Date & Time  :{datetime.now().strftime('%d-%m-%Y %H:%M:%S')}\")\n",
-    "    print(\"-\"*45)\n",
-    "\n",
-    "    print(\"{:<20} {:>10} {:>10}\".format(\"Item\",\"Qty\",\"Amount\"))\n",
-    "    print(\"-\"*45)\n",
-    "    for item in order_items:\n",
-    "        print(\"{:<20} {:>10} {:>10.2f}\".format(\n",
-    "            item['name'],\n",
-    "            item['quantity'],\n",
-    "            item['amount']))\n",
-    "    print(\"-\"*45)\n",
-    "    print(\"{:<20} {:>8} {:>12.2f}\".format(\"\",\"Total:\",total_amount))\n",
-    "    print(\"=\"*45)\n",
-    "    cursor.execute(\"Insert Into Customers (Name,mobile) Values (?, ?)\",\n",
-    "    (name,mobile))\n",
-    "    conn.commit\n",
-    "    cursor.execute(\"Select @@IDENTITY\")\n",
-    "    customer_id=cursor.fetchone()[0]\n",
-    "    for item in order_items:\n",
-    "        cursor.execute(\"\"\"Insert into Orders\n",
-    "                       (CustomerID,ItemID, Quantity,  Amount,OrderDate)\n",
-    "                       values(?,?,?,?,Getdate())\n",
-    "                       \"\"\",\n",
-    "                       (\n",
-    "                       customer_id,\n",
-    "                       item['id'],\n",
-    "                       item['quantity'],\n",
-    "                       item['amount']\n",
-    "                       )\n",
-    "                    )\n",
-    "        conn.commit()\n",
-    "   \n",
-    "    conn.close()"
+    "obj= Hotel_Bill_print()\n",
+    "obj.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "125b3b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad76db5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e831b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
